tests/undefined/undefined.exp
Error: undefined.js:3
  3:     x.foo();
         ^^^^^^^ call of method `foo`. Method cannot be called on possibly undefined value
  3:     x.foo();
         ^ uninitialized variable

Error: undefined2.js:7
  7:     (name: boolean); // error, string or void
          ^^^^ Cannot cast `name` to boolean because string [1] is incompatible with boolean [2].
  References:
    6:     var name = id ? 'John' : undefined;
                           ^^^^^^ [1]: string
    7:     (name: boolean); // error, string or void
                  ^^^^^^^ [2]: boolean

Error: undefined2.js:7
  7:     (name: boolean); // error, string or void
          ^^^^ Cannot cast `name` to boolean because undefined [1] is incompatible with boolean [2].
  References:
   13: declare var undefined: void;
                              ^^^^ [1]: undefined. See lib: <BUILTINS>/core.js:13
    7:     (name: boolean); // error, string or void
                  ^^^^^^^ [2]: boolean

Error: undefined2.js:13
 13:     (bar[x]: boolean); // error, string or void
          ^^^^^^ Cannot cast `bar[x]` to boolean because string [1] is incompatible with boolean [2].
  References:
   11:       'bar',
             ^^^^^ [1]: string
   13:     (bar[x]: boolean); // error, string or void
                    ^^^^^^^ [2]: boolean

Error: undefined2.js:13
 13:     (bar[x]: boolean); // error, string or void
          ^^^^^^ Cannot cast `bar[x]` to boolean because undefined [1] is incompatible with boolean [2].
  References:
   13: declare var undefined: void;
                              ^^^^ [1]: undefined. See lib: <BUILTINS>/core.js:13
   13:     (bar[x]: boolean); // error, string or void
                    ^^^^^^^ [2]: boolean

Error: undefined2.js:22
 22:       x[0]; // should error, could be void
           ^^^^ An indexer property is missing in `Number` [1].
  References:
   22:       x[0]; // should error, could be void
             ^ [1]: `Number`

Error: undefined2.js:29
 29:     (bar[x]: boolean); // error, string only
          ^^^^^^ Cannot cast `bar[x]` to boolean because string [1] is incompatible with boolean [2].
  References:
   17:     var undefined = 'foo';
                           ^^^^^ [1]: string
   29:     (bar[x]: boolean); // error, string only
                    ^^^^^^^ [2]: boolean

Error: undefined2.js:29
 29:     (bar[x]: boolean); // error, string only
          ^^^^^^ Cannot cast `bar[x]` to boolean because string [1] is incompatible with boolean [2].
  References:
   27:       'bar',
             ^^^^^ [1]: string
   29:     (bar[x]: boolean); // error, string only
                    ^^^^^^^ [2]: boolean


Found 8 errors
